# starter-snake-rust

./: AGENTS.md  BASELINE_PERFORMANCE_CAPTURE_EXECUTION_SUMMARY.md  BATTLESNAKE_PROGRESS.md  COMPREHENSIVE_BEHAVIORAL_VALIDATION_REPORT.md  COMPREHENSIVE_COMPARATIVE_ANALYSIS_REPORT.md  COMPREHENSIVE_NEURAL_NETWORK_VALIDATION_REPORT.md  COMPREHENSIVE_TEST_IMPLEMENTATION_REPORT.md  CRITICAL_BEHAVIORAL_ANOMALY_ANALYSIS_REPORT.md  CRITICAL_SOLO_GAME_FAILURE_DEBUG_REPORT.md  Cargo.toml  ENVIRONMENT_VALIDATION_REPORT.md  FINAL_SOLO_GAME_COMPLETION_SUCCESS_REPORT.md  MCTS_PERFORMANCE_BENCHMARK.md  NEURAL_CONFIDENCE_SYSTEM_DOCUMENTATION.md  NEURAL_NETWORK_ACTIVATION_COMPLETION_REPORT.md  NEURAL_NETWORK_ACTIVATION_PLAN.md  NEURAL_NETWORK_CONFIDENCE_ARCHITECTURE.md  NEURAL_NETWORK_ENHANCEMENT_PLAN.md  NEURAL_NETWORK_PIPELINE_VERIFICATION_REPORT.md  ONNX_NEURAL_NETWORK_TRAINING_EXECUTION_COMPLETION_REPORT.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_INVESTIGATION_REPORT.md  PHASE_1_PERFORMANCE_VALIDATION_REPORT.md  PHASE_1_UNIT_TEST_INFRASTRUCTURE_RECOVERY_COMPLETION_REPORT.md  PHASE_2_ADVANCED_SPATIAL_ANALYSIS_VALIDATION_REPORT.md  PHASE_3_FINAL_COMPLETION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_READINESS_ASSESSMENT_REPORT.md  PHASE_4_SINGLE_AGENT_REINFORCEMENT_LEARNING_ARCHITECTURE.md  POST_EMERGENCY_COMPREHENSIVE_VALIDATION_REPORT.md  README_DATA_COLLECTION.md  README_SELF_PLAY_TRAINING.md  Rocket.toml  SELF_PLAY_IMPLEMENTATION_ROADMAP.md  SELF_PLAY_TRAINING_ACTIVATION_COMPLETION_REPORT.md  SELF_PLAY_TRAINING_ARCHITECTURE.md  SELF_PLAY_TRAINING_EXECUTION_COMPLETION_REPORT.md  (+73 more)
(+70 files in other folders)
