[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.11.8"
rand = { version = "0.9.1", features = ["std", "std_rng"] }

# Neural Network Inference Dependencies
onnxruntime = "0.0.14"
ndarray = { version = "0.15", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
lazy_static = "1.4"
